# optifik

./: .buildinfo  .gitignore  CHANGELOG.md  CONTRIBUTORS.txt  ProminenceFunction.txt  README.md  RELEASE.md  TODO.txt  ack_licence.html  api_reference.html  check.py  examples.html  generalities.html  genindex.html  index.html  installation.html  objects.inv  piplist.txt  py-modindex.html  pyproject.toml  pyproject.toml~  requirements.txt  search.html  searchindex.js  snippets.html  test.html  venv_init.sh
.doctrees/: ack_licence.doctree  api_reference.doctree  environment.pickle  examples.doctree  generalities.doctree  index.doctree  installation.doctree  snippets.doctree  test.doctree
.doctrees/notebooks/: test.doctree
.github/workflows/: docs.yml
_modules/: index.html
_modules/optifik/: fft.html  io.html  minmax.html  scheludko.html
_sources/: ack_licence.rst  examples.rst  generalities.rst  index.rst  installation.rst  snippets.rst  test.rst
data/basic/: 000004310.xy  000006544.xy  000018918.xy  void.xy
data/spectraLorene/sample1/: 000266.xy  000449.xy  000819.xy  001188.xy  001925.xy  003582.xy  003766.xy  004872.xy  005241.xy  006163.xy  007452.xy  008005.xy  008188.xy  008373.xy  009479.xy  009661.xy  010032.xy  010768.xy  012058.xy  012610.xy  013532.xy  013710.xy  013900.xy  014084.xy  015557.xy  015741.xy  015927.xy  sample1.yaml
data/spectraLorene/sample2/: 005147.xy
data/spectraManue/: known_values.py
data/spectraManue/.backups/: known_values.py
data/spectraManue/sample3/: 000244.xy  000503.xy  001044.xy  001091.xy  001752.xy  003091.xy  003331.xy  003372.xy  003610.xy  003812.xy  003892.xy  004210.xy  004410.xy  004491.xy  004570.xy  004930.xy  005130.xy  005330.xy  005410.xy  005830.xy  006172.xy  006250.xy  006449.xy  006490.xy  006532.xy  006718.xy  006840.xy  007660.xy  007740.xy  007859.xy  007900.xy  008239.xy  008439.xy  008480.xy  008620.xy  008740.xy  008819.xy  008860.xy  008940.xy  009259.xy  (+472 more)
data/spectraVictor1/: T3817.xy  T3884.xy  T4025.xy  T4087.xy  T4151.xy  T4219.xy  T4496.xy  T4702.xy  T4762.xy  T4896.xy  T4969.xy  T5039.xy  T5110.xy  T5190.xy  T5255.xy  T5325.xy  T5469.xy  known_value.yaml
data/spectraVictor2/order0/: T14143.xy  T14283.xy  T14354.xy  T14432.xy  T14503.xy  T14573.xy  T14642.xy  T14714.xy  T14787.xy  T14927.xy  T15063.xy  T15136.xy  T15206.xy  T15277.xy  T15350.xy  T15418.xy  T15492.xy  T15633.xy  T15706.xy  T15777.xy  T15910.xy  T16053.xy  T16267.xy  T16335.xy  T16545.xy  T16678.xy  T16739.xy  T16871.xy  T17077.xy  T17271.xy  T17416.xy  T17486.xy  T17625.xy  T17695.xy  T17769.xy  T17906.xy  T17969.xy  T18111.xy  T18177.xy  T18458.xy  (+63 more)
data/spectraVictor2/order1/: T09574.xy  T09645.xy  T09789.xy  T09934.xy  T10006.xy  T10148.xy  T10578.xy  T10652.xy  T10792.xy  T10865.xy  T11012.xy  T11090.xy  T11160.xy  T11368.xy  T11653.xy  T11940.xy  T12014.xy  T12084.xy  T12154.xy  T12296.xy  T12357.xy  T12420.xy  T12563.xy  T12634.xy  T12705.xy  T12779.xy  T12923.xy  T12993.xy  T13210.xy  T13281.xy  T13351.xy  T13495.xy  T13638.xy  T13710.xy  T13855.xy  T13930.xy  T13997.xy  known_to_fail.yaml  known_value.yaml
data/spectraVictor2/order2/: T7727.xy  T7793.xy  T7936.xy  T7999.xy  T8069.xy  T8144.xy  T8284.xy  T8356.xy  T8427.xy  T8490.xy  T8633.xy  T8705.xy  T8930.xy  T9003.xy  T9143.xy  T9433.xy
data/spectraVictor2/order3/: T6934.xy  T7016.xy  T7229.xy  T7302.xy  T7435.xy  T7509.xy  T7577.xy  T7652.xy  known_value.txt  known_value.yaml
data/spectraVictor2/order4/: T5951.xy  T6022.xy  T6085.xy  T6156.xy  T6227.xy  T6304.xy  T6442.xy  T6575.xy  known_value.txt  known_value.yaml
data/spectraVictor2/order5/: T5543.xy  T5747.xy  known_value.yaml
docs/: conf.py  examples.rst  index.rst  installation.rst
docs/_build/doctrees/: environment.pickle  examples.doctree
docs/_build/html/: .buildinfo  .buildinfo.bak  examples.html  genindex.html  index.html  installation.html  py-modindex.html  search.html  searchindex.js
docs/docs/: api_reference.rst  conf.py  index.rst
docs/docs/_build/: api_reference.html  example.html  genindex.html  index.html  installation.html  objects.inv  (+1 more)
docs/notebooks/: test.ipynb
notebooks/: test.html  test.ipynb
optifik/: analysis.py  auto.py  fft.py  io.py  minmax.py  scheludko.py  utils.py
optifik.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
tests/: test_SV1.py  test_SV2o0.py  test_SV2o1.py  test_SV2o2.py  test_SV2o3.py  test_SV2o4.py  test_SV2o5.py  test_basic.py  test_fft.py  test_io.py  test_minmax.py  test_scheludko.py  test_thickness.py
tests/basic/: 000005253.xy
tests/spectra/: sample3.yaml
tests/spectraVictor1/: T3963.xy  T4292.xy  T4354.xy  T4427.xy  T4558.xy  T4632.xy  T4824.xy  T5403.xy
(+2246 files in other folders)
