[project]
name = "optifik"
version = "0.1.1"
description = "Compute film thickness from interferometry"
authors = [
  { name = "François Boulogne", email = "francois.boulogne@cnrs.fr" },
  { name = "Victor Ziapkoff", email = "victor.ziapkoff@universite-paris-saclay.fr" },
]
license = "GPL-3.0-or-later"
readme = "README.md"
requires-python = ">=3.8"
dependencies = [
  "numpy>=1.10.0",
  "scipy>=1.1.0",
  "matplotlib>=1.3.1",
]

[tool.setuptools]
packages = ["optifik"]


[tool.bumpver]
current_version = "0.1.1"
version_pattern = "MAJOR.MINOR.PATCH"
commit = true
tag = true
push = false


[bumpver.file_patterns]
"pyproject.toml" = [
    'current_version = "{version}"',
    'version = "{version}"',
]
"optifik/__init__.py" = [
    '^__version__ = "{version}"$,',
]
"README.md" = [
    '^Current stable version {version}',
]



[project.urls]
Homepage = "https://github.com/votrecompte/votreprojet"
Documentation = "https://github.com/votrecompte/votreprojet#readme"
Repository = "https://github.com/sciunto-org/optifik"
Issues = "https://github.com/sciunto-org/optifik/issues"


[project.optional-dependencies]
dev = [
  "pytest",
  "pytest-cov",
  "bumpver"
]

docs = [
  "sphinx>=7.0",
  "sphinx-rtd-theme>=2.0",
  "numpydoc>=1.6",
  "myst-parser>=2.0",  # Markdown + reStructuredText
  "sphinx-autodoc-typehints>=2.0",
  "sphinx-copybutton>=0.5",
  "sphinx-design>=0.5",
  #"matplotlib>=3.0", # For plots in docstring
]

[tool.setuptools.package-data]
optifik = ["data/*"]

[tool.pytest.ini_options]
#addopts = "-v --tb=short --disable-warnings"
testpaths = ["tests"]
python_files = "test_*.py"
pythonpath = ["."]

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.coverage.run]
source = ["optifik"]
omit = ["optifik/tests/*"]
